--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href='/static/main.css'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{name}}{{name2}}</title>
-<!--    <script src="/static/js/codemirror.min.js"></script>-->
-<!--    <script src="/static/js/javascript.min.js"></script>-->
 
 </head>
 <body>
@@ -28,28 +26,31 @@
     </div>
     <div class="sidebar-footer">
         <div id="sidebar-username">
-            <i class="gg-profile"></i>&nbsp;{{username | e}}
+            <i class="gg-profile"></i>&nbsp;
+            <div id="sidebar-username-inner">
+                {{username | e}}
+            </div>
         </div>
 
-        <a class="sidebar-button" href="/logout" id="logout-button"><i class="gg-log-out"></i></a>
+        <a class="sidebar-button" title="Logout" href="/logout" id="logout-button"><i class="gg-log-out"></i></a>
     </div>
 </div>
 
 <div class="main-content">
     <div class="header">
         <div>
-            <a class="header-button" href="#" id="sidebar-toggler">
+            <a class="header-button" title="Toggle Sidebar" href="#" id="sidebar-toggler">
                 <i class="gg-menu"></i>
             </a>
-            <a class="header-button" id="new-chat-button" href="/">
+            <a class="header-button"  title="New Chat" id="new-chat-button" href="/">
                 <i class="gg-math-plus"></i>
             </a>
-            <a class="header-button" href="#" id="right-panel-toggler">
+            <a class="header-button"  title="Toggle Editor" href="#" id="right-panel-toggler">
                 <i class="gg-code"></i>
             </a>
 
             <!--suppress HtmlUnknownAnchorTarget -->
-            <a class="header-button" href="#popupSettings" id="settings-button">Settings</a>&nbsp;
+            <a class="header-button" title="Settings" href="#popupSettings" id="settings-button">Settings</a>&nbsp;
 
             {% if collections %}
             <!-- Trigger link -->
@@ -91,7 +92,7 @@
         <div>
             <!--                <button>🔔</button>-->
             <!--                <button>👤</button>-->
-            <a href="/" id="logo-link"><strong>{{name}}</strong>{{name2}}</a>
+            <a href="/" title="New Chat" id="logo-link"><strong>{{name}}</strong>{{name2}}</a>
         </div>
     </div>
 
@@ -115,7 +116,7 @@
         <div class="chat-input">
             <div id="extra-input-buttons">
                 <!--suppress HtmlUnknownAnchorTarget -->
-                <a href="#popupUpload" id="translate-button"><i class="gg-attachment"></i></a>
+                <a href="#popupUpload" title="Upload" id="translate-button"><i class="gg-attachment"></i></a>
                 <!--            <button id="record"><i class="gg-mic"></i></button>-->
             </div>
 
@@ -126,11 +127,6 @@
             </button>
             <div class="inner-footer">
                 <div class="footer-buttons">
-
-                    <!--                <a href="#popupUpload" id="translate-button">-->
-                    <!--                    Upload-->
-                    <!--            <span id="upload-plus"></span>-->
-                    <!--                </a>&nbsp;-->
                     <span id="timing-info"></span>
 
                 </div>
