minor fix on css for safari

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -517,6 +517,7 @@ a {
 
 li:hover .delete-history-item {
     visibility: visible; /* Show the button when the li element is hovered */
+    position: relative;
 }
 
 
