remove unnecessary old values

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -39,6 +39,10 @@ body {
     height: 50px; /* Ensuring equal height */
 }
 
+.sidebar-header strong {
+    margin-left: 16px;
+}
+
 .sidebar-content {
     flex: 1;
     overflow-y: auto;
