--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -14,12 +14,21 @@
 <!--        <button>🔍</button>-->
 <!--        <button>⚙️</button>-->
 <!--        <button>📁</button>-->
-        <strong>History</strong>
+<!--        <strong>History</strong>-->
     </div>
     <div class="sidebar-content">
+        <div id="projects-div">
+            <div class="d-flex">
+                <strong class="sidebar-title">Projects</strong>
+                <button id="new-project-button" onclick="createProject()">+</button>
+            </div>
+            <ul id="projects">
+                <li>New project</li>
+            </ul>
+        </div>
         <div id="history-div">
 
-
+            <strong class="sidebar-title">History</strong>
             <ul id="history">
             </ul>
         </div>
