--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -20,7 +20,7 @@
         <div id="projects-div">
             <div class="d-flex">
                 <strong class="sidebar-title">Projects</strong>
-                <button id="new-project-button" onclick="createProject()">+</button>
+                <button id="new-project-button">+</button>
             </div>
             <ul id="projects">
                 <li>New project</li>
