tool call would work

--- a/server/templates/common/popups/project.html
+++ b/server/templates/common/popups/project.html
@@ -1,17 +1,15 @@
-<div id="popup2" class="overlay">
+<div id="popupProject" class="overlay">
     <div class="popup">
-        <h2>Upload</h2>
+        <h2>New project</h2>
         <a class="close" href="#">&times;</a>
         <div class="content">
             <div>
                 <form method="post" enctype="multipart/form-data" id="upload-pdf">
                     <div>
                         <label>
-                            Choose a PDF file
+                            Project name:
                             <br><br>
-                            <strong>If you need analysis for other text based formats, contact WEN</strong>
-                            <br><br>
-                            <input id="pdf-file" type="file" accept="application/pdf" required>
+                            <input id="project-name" type="text" required>
                         </label>
                     </div>
                     <div>
