--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -148,7 +148,7 @@
 
 {% include 'common/popups/settings.html' %}
 {% include 'common/popups/upload.html' %}
-{% include 'common/popups/generic.html' %}
+{% include 'common/popups/project.html' %}
 <script type="module" src="/static/js/app.js"></script>
 </body>
 </html>
