--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -17,15 +17,15 @@
 <!--        <strong>History</strong>-->
     </div>
     <div class="sidebar-content">
-        <div id="projects-div">
-            <div class="d-flex">
-                <strong class="sidebar-title">Projects</strong>
-                <button id="new-project-button">+</button>
-            </div>
-            <ul id="projects">
-                <li>New project</li>
-            </ul>
-        </div>
+<!--        <div id="projects-div">-->
+<!--            <div class="d-flex">-->
+<!--                <strong class="sidebar-title">Projects</strong>-->
+<!--                <button id="new-project-button">+</button>-->
+<!--            </div>-->
+<!--            <ul id="projects">-->
+<!--                <li>New project</li>-->
+<!--            </ul>-->
+<!--        </div>-->
         <div id="history-div">
 
             <strong class="sidebar-title">History</strong>
